--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=blog
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3307/blog
+spring.datasource.username=root
+spring.datasource.password=example
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
